Add new donate video

--- a/app/views/donations/index.html.haml
+++ b/app/views/donations/index.html.haml
@@ -65,8 +65,7 @@
         %h2.text-h2.mb-2 Everything you need to know about donations
         %p.text-p-large.mb-16 Why do we need donations? How much does Exercism cost to run? How do we spend donations? Watch Jeremy's explanatory video 👇
         .text-h2.mb-40{ class: 'w-[100%]' }
-          .c-youtube-container
-            %iframe{ width: "560", height: "315", src: "https://www.youtube-nocookie.com/embed/f3EMJpVo568", title: "YouTube video player", frameborder: "0", allow: "accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture", allowfullscreen: true }
+          = vimeo_embed("855534271?h=97d3a4c8c2")
 
         %h2.text-h2.mb-32 Here&apos;s what you can do to support us.
         .flex.md:flex-row.flex-col.gap-20.shadow-baseZ1.p-24.rounded-16.bg-backgroundColorA.mb-16.border-2.border-gradient.relative
