--- a/app/css/ui-kit/text.css
+++ b/app/css/ui-kit/text.css
@@ -99,4 +99,8 @@
         -webkit-background-clip: text;
         -webkit-text-fill-color: transparent;
     }
+
+    .text-balance {
+        text-wrap: balance;
+    }
 }
