--- a/app/views/tracks/show/_summary_article.html.haml
+++ b/app/views/tracks/show/_summary_article.html.haml
@@ -49,7 +49,7 @@
         %h2.text-h4.mb-2.text-center
           #{track.title} Trophy Cabinet
         %p.text-p-base.text-textColor6.mb-20.text-center
-          Click to explore the different trophies you can achieve!
+          Unlock for achievements as you progress through the track.
 
         = render ReactComponents::Track::Trophies.new(track, user_track.user)
 
