--- a/app/css/pages/track-show.css
+++ b/app/css/pages/track-show.css
@@ -190,15 +190,19 @@
                 }
             }
         }
+        .c-react-wrapper-track-trophies {
+            min-height: 144px;
+        }
         & section.trophy-cabinet {
             @apply shadow-lg bg-backgroundColorA rounded-8 pt-24 pb-28 px-32;
             .trophies {
                 @apply grid grid-cols-6 gap-16;
             }
             .trophy {
-                @apply border-1 border-borderColor7 rounded-8 bg-backgroundColorA;
+                @apply border-1 border-borderColor7 rounded-8 bg-backgroundColorA overflow-hidden;
                 @apply flex flex-col items-stretch;
                 flex: 1 1 20%;
+
                 .icon {
                     @apply p-8;
                     img {
@@ -208,7 +212,7 @@
                 .title {
                     @apply border-t-1 border-borderColor7 p-8 bg-backgroundColorB bg-white;
                     @apply text-center text-textColor6 uppercase font-semibold text-12;
-                    @apply flex flex-grow place-items-center self-center text-center;
+                    @apply grid flex-grow place-items-center text-center;
                     @apply leading-130;
                 }
                 &.revealable {
@@ -759,6 +763,18 @@
         }
         & .c-prominent-link {
             @apply self-center;
+        }
+    }
+}
+.m-track-trophy {
+    & .num-awardees {
+        @apply bg-backgroundColorD;
+        @apply py-8 px-16 mb-10;
+        @apply rounded-8;
+        & .c-icon {
+            @apply h-[24px] w-[24px] mr-4 mb-4;
+            @apply filter-textColor2;
+            @apply inline;
         }
     }
 }
