--- a/app/views/insiders/show.html.haml
+++ b/app/views/insiders/show.html.haml
@@ -18,7 +18,7 @@
             Why not start with the latest behind the scenes Insiders video 👉
 
         .top-rhs
-          = vimeo_embed("853494393?h=3f8e06d609")
+          = vimeo_embed("855811732?h=dc731ec047")
 
   .gradient-container.py-48
     .lg-container
@@ -31,6 +31,8 @@
         = youtube_embed("nroPGD11hkw")
         = vimeo_embed("853051394?h=c9bde0cbd4")
         = vimeo_embed("853494393?h=3f8e06d609")
+        = youtube_embed("XjypvEa6kgM")
+        = vimeo_embed("855811732?h=dc731ec047")
 
   .gradient-container.py-48
     .lg-container
