--- a/app/views/tracks/show/_summary_article.html.haml
+++ b/app/views/tracks/show/_summary_article.html.haml
@@ -13,7 +13,7 @@
             You&apos;re
             %em #{user_track.completed_percentage}%
             through the #{track.title} track.
-            %strong Keep it up! 🚀
+            %strong= user_track.completed_percentage_text
 
         .c-progress
           .bar{ style: "width: #{user_track.completed_percentage}%" }
