Add source code pro

--- a/app/css/fonts.css
+++ b/app/css/fonts.css
@@ -46,3 +46,12 @@
     font-weight: 900;
     src: url("poppins-v20-latin-900.woff2") format("woff2"); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
 }
+
+@font-face {
+    font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
+    font-family: "Source Code Pro";
+    font-style: normal;
+    font-weight: 400;
+    src: url("source-code-pro-v22-latin_latin-ext-regular.woff2")
+        format("woff2"); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+}
