--- a/app/css/fonts.css
+++ b/app/css/fonts.css
@@ -53,7 +53,7 @@
     font-family: "Source Code Pro";
     font-style: normal;
     font-weight: 400;
-    src: url("../fonts/source-code-pro-v22-latin_latin-ext-regular.woff2")
+    src: url("source-code-pro-v22-latin_latin-ext-regular.woff2")
         format("woff2"); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
 }
 /* source-code-pro-500 - latin_latin-ext */
@@ -62,8 +62,7 @@
     font-family: "Source Code Pro";
     font-style: normal;
     font-weight: 500;
-    src: url("../fonts/source-code-pro-v22-latin_latin-ext-500.woff2")
-        format("woff2"); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+    src: url("source-code-pro-v22-latin_latin-ext-500.woff2") format("woff2"); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
 }
 /* source-code-pro-600 - latin_latin-ext */
 @font-face {
@@ -71,8 +70,7 @@
     font-family: "Source Code Pro";
     font-style: normal;
     font-weight: 600;
-    src: url("../fonts/source-code-pro-v22-latin_latin-ext-600.woff2")
-        format("woff2"); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+    src: url("source-code-pro-v22-latin_latin-ext-600.woff2") format("woff2"); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
 }
 /* source-code-pro-700 - latin_latin-ext */
 @font-face {
@@ -80,6 +78,5 @@
     font-family: "Source Code Pro";
     font-style: normal;
     font-weight: 700;
-    src: url("../fonts/source-code-pro-v22-latin_latin-ext-700.woff2")
-        format("woff2"); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+    src: url("source-code-pro-v22-latin_latin-ext-700.woff2") format("woff2"); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
 }
