Remove margin bottom from Published by

--- a/app/views/blog_posts/show.html.haml
+++ b/app/views/blog_posts/show.html.haml
@@ -39,7 +39,7 @@
         .byline.shadow-sm.rounded-8.py-16.px-24.flex.flex-col.md:flex-row.md:items-center.border-1.border-borderColor6
           .flex.items-center
             = avatar(@post.author)
-            .info.mb-20.md:mb-0
+            .info
               .text-16.leading-150.text-textColor6.mb-2 Published by
               .sm:flex.hidden.items-center.mb-4
                 .text-h4.mr-16 @#{@post.author.handle}
