Fix grammar in 100% completion message

--- a/app/views/tracks/show/_summary_article.html.haml
+++ b/app/views/tracks/show/_summary_article.html.haml
@@ -10,7 +10,7 @@
             You&apos;ve just started the #{track.title} track.
             %strong Good luck, adventurer!
           - elsif user_track.completed_percentage == 100
-            Amazing - you've complete the track!!
+            Amazing - you've completed the track!!
             %strong What an achievement! 👏
           - else
             You&apos;re
