--- a/app/views/layouts/_head.html.haml
+++ b/app/views/layouts/_head.html.haml
@@ -1,3 +1,5 @@
+= render "layouts/font_loading"
+
 -# %meta{ "http-equiv": "Content-Security-Policy", content: csp_policy}
 
 / We always want this rendered at the start.
