--- a/app/views/layouts/nav/challenge_12in23.html.haml
+++ b/app/views/layouts/nav/challenge_12in23.html.haml
@@ -4,10 +4,10 @@
   %p.text-p-base.font-semibold.mb-8
     Try out 12 different programming languages in 2023, curated and guided by us!
   %p.text-p-base.mb-16
-    This month is Appy August,
-    exploring languages used to write apps: ABAP, CoffeeScript, Dart, Delphi, Elm, Java, JavaScript, Kotlin, Objective-C, PHP, PureScript, ReasonML, Swift and TypeScript.
+    This month is Slimline September,
+    exploring languages with concise syntax: 8th, AWK, Bash, jq, Perl and Raku.
 
   = link_to "Explore #12in23", challenge_path("12in23"), class: 'btn-primary btn-s mb-12'
 
   %p.text-p-small.mb-8
-    For each month we've designed a different theme, with featured exercises, swag, interviews, badges, live streaming and more.
+    For each month we've designed a different theme, with featured exercises, interviews, badges, live streaming and more.
