--- a/app/views/dashboard/show.html.haml
+++ b/app/views/dashboard/show.html.haml
@@ -89,10 +89,10 @@
         .flex.flex-col.items-start.mb-28
           .text-adaptivePurple.font-semibold.leading-150.flex.items-center.mb-4
             %span.emoji.mr-6 📆
-            Month 8 of #12in23
-          %h2.text-h3 It's Appy August
+            Month 9 of #12in23
+          %h2.text-h3 It's Slimline September
           %p.text-p-base.mb-6
-            This month we're exploring languages that can be used to build apps: ABAP, CoffeeScript, Dart, Delphi, Elm, Java, JavaScript, Kotlin, Objective-C, PHP, PureScript, ReasonML, Swift and TypeScript!
+            This month we're exploring languages with concise syntax: 8th, AWK, Bash, jq, Perl and Raku!
             Have fun!
           = link_to challenge_path('12in23'), class: "btn btn-primary btn-base" do
             %span Explore #12in23
