--- a/app/views/mailers/notifications_mailer/onboarding_community.html.haml
+++ b/app/views/mailers/notifications_mailer/onboarding_community.html.haml
@@ -14,11 +14,13 @@
   We have several community features that I think you'll find interesting and enjoyable:
 %ul
   %li
-    Our #{link_to 'forum', 'https://forum.exercism.org'} is a great place to ask questions, share ideas, and connect with others who are passionate about coding.
+    Our #{link_to 'Discord', 'https://exercism.org/r/discord'} channel is a the place to go to hang out with the Exercism community, join community calls, and get quick support.
   %li
-    On #{link_to 'Twitch', 'https://twitch.tv/exercismlive'}, we host reguar live streaming featuring both our community and live guests from the coding ecosystem.
+    Our #{link_to 'forum', 'https://exercism.org/r/forum'} is a great place to ask longer-form questions, share ideas, and connect with others who are passionate about coding.
   %li
-    Our #{link_to 'YouTube Channel', 'https://www.youtube.com/@exercism_org'} is the space to find our prime video content - educational walkthrough, Exercism updates, community stories, and interviews with industry experts.
+    Our #{link_to 'YouTube Channel', 'https://exercism.org/r/youtube'} is the space to find our best video content - educational walkthrough, Exercism updates, community stories, and interviews with industry experts.
+  %li
+    On #{link_to 'Twitch', 'https://exercism.org/r/twitch'}, we host live streams featuring both our community and guests from the coding ecosystem.
 
 %p
   We would love for you to join in and become an active member of our community.
@@ -29,9 +31,9 @@
   Best regards,
 
 %p
-  Jonathan
+  Jeremy Walker
   %br
-  Exercism Community Manager
+  Exercism Co-founder &amp; CEO
 
 = email_button_to 'Visit Exercism', root_url
 
