--- a/app/views/mailers/notifications_mailer/onboarding_fundraising.html.haml
+++ b/app/views/mailers/notifications_mailer/onboarding_fundraising.html.haml
@@ -1,20 +1,23 @@
-%p Hello there,
-
-%p I wanted to take a moment to talk to you about something that is really important to us here at Exercism - our social mission.
+%p Hey there,
 
 %p
-  We are a not-for-profit platform, which means that we rely on donations from our community to keep our platform running.
-  However, our priority is not to make money, but rather to help as many people as possible to excel in programming, regardless of their background.
+  I hope you're enjoying #{link_to 'Exercism', 'https://exercism.org'} so far!
+%p
+  Did you know that we're a not-for-profit organisation?
+  We want everyone to be able to benefit from Exercism, no matter how much money they have, so we keep the site 100% free.
 
 %p
-  That's why we offer Exercism for free.
-  We believe that access to quality programming education should not be restricted by financial barriers.
-  Our platform is designed to be inclusive and accessible to all, no matter where you come from or what your level of experience is.
+  We rely on donations those that can afford it to keep Exercism running.
+  We're an extremely lean operation and considering we serve over 1.5 million people, we have very low costs (~$250k/year).
+  I put a video together that explains more 👇
 
 %p
-  We hope that you find our platform helpful and that it will help you achieve your programming goals.
-  If you do find our platform useful, we would appreciate it if you considered supporting us by making a donation.
-  However, please know that this is not a requirement and our platform will always be available to you for free.
+  %a{ href: "https://exercism.org/insiders", style: "display:block; box-shadow: 0px 2px 4px #0F0923; margin-bottom:16px" }
+    %img{ src: "https://assets.exercism.org/images/thumbnails/why-donate-to-exercise-with-play-icon.jpg", style: "width:100%; display:block" }
+
+%p
+  If you do find Exercism useful and if you can afford to do so, please support us by making a donation.
+  However, if you can't afford it, please know that this is not a requirement and our platform will always be available to you for free.
 
 %p
   Your support, whether through a donation or simply spreading the word about Exercism, is critical in helping us achieve our social mission.
