Improve copy further

--- a/app/views/mailers/notifications_mailer/onboarding_community.html.haml
+++ b/app/views/mailers/notifications_mailer/onboarding_community.html.haml
@@ -8,10 +8,15 @@
   Exercism is an open-source, community-powered project.
   In fact we're one of the biggest Open Source organisations on #{link_to 'GitHub', 'https://github.com/exercism/'} with over 350 repositories.
   Our community is centered around our values of empathy, kindness, and inclusivity.
-  We strive to create a safe and supportive space where people from all walks of life can come together to learn and grow.
+  Check out this video or read more below 👇
 
-%p
-  We have several community features that I think you'll find interesting and enjoyable:
+%p{ style: "margin-bottom: 24px" }
+  %a{ href: "https://www.youtube.com/watch?v=fSh-nGw3IP8", style: "display:block; box-shadow: 0px 2px 4px #0F0923" }
+    %img{ src: "https://assets.exercism.org/images/thumbnails/yt-onboarding-community-with-play-icon.jpg", style: "width:100%; display:block" }
+
+
+%p{ style: "margin-bottom:8px" }
+  We have several community areas that you might find interesting and enjoyable:
 %ul
   %li
     Our #{link_to 'Discord', 'https://exercism.org/r/discord'} channel is a the place to go to hang out with the Exercism community, join community calls, and get quick support.
@@ -21,6 +26,7 @@
     Our #{link_to 'YouTube Channel', 'https://exercism.org/r/youtube'} is the space to find our best video content - educational walkthrough, Exercism updates, community stories, and interviews with industry experts.
   %li
     On #{link_to 'Twitch', 'https://exercism.org/r/twitch'}, we host live streams featuring both our community and guests from the coding ecosystem.
+
 
 %p
   We would love for you to join in and become an active member of our community.
