--- a/app/views/mailers/notifications_mailer/onboarding_fundraising.html.haml
+++ b/app/views/mailers/notifications_mailer/onboarding_fundraising.html.haml
@@ -2,8 +2,8 @@
 
 %p
   I hope you're enjoying #{link_to 'Exercism', 'https://exercism.org'} so far!
-%p
-  Did you know that we're a not-for-profit organisation?
+  Did you know that
+  %strong{ style: "font-weight:500" } we're a not-for-profit organisation?
   We want everyone to be able to benefit from Exercism, no matter how much money they have, so we keep the site 100% free.
 
 %p
@@ -30,9 +30,9 @@
 %p Best regards,
 
 %p
-  Loretta
+  Jeremy Walker
   %br
-  Head of Partnerships at Exercism
+  Exercism Co-founder &amp; CEO
 
 = email_button_to 'Visit Exercism', root_url
 
