--- a/app/views/mailers/mailshots_mailer/company_support_testimonial.text.erb
+++ b/app/views/mailers/mailshots_mailer/company_support_testimonial.text.erb
@@ -11,8 +11,8 @@ As a reminder, Exercism is a not-for-profit organisation. We provided over 100 m
 If you'd like more information on either idea, please let me know!
 
 Thanks,
-Loretta Bresciani Murray
-Head of Partnerships at Exercism
+Jeremy Walker
+Co-founder & CEO
 
 Explore Exercism at https://exercism.org.
 
