--- a/app/views/settings/donations.html.haml
+++ b/app/views/settings/donations.html.haml
@@ -72,5 +72,5 @@
               Once you've donated, you'll be able to see a history of all donations here.
             %p.text-p-base
               If you've donated to Exercism, but do not see your donations here or have not been awarded the Supporter badge, please email
-              = link_to "Loretta", "mailto:loretta@exercism.org"
-              and she'll sort it for you.
+              = link_to "Jeremy", "mailto:jeremy@exercism.org"
+              and he'll sort it for you.
