--- a/app/views/about/impact.html.haml
+++ b/app/views/about/impact.html.haml
@@ -167,18 +167,18 @@
         more significant funding! Could you be the one to make it happen?
       .flex.flex-col.border.border-2.border-gradient.rounded-16.md:px-40.px-24.py-24.shadow-smZ1
         .flex.flex-col.gap-8.md:gap-0.items-center.mx-auto.mb-24.md:flex-row
-          = image_tag "team/loretta.jpg", alt: "A photo of Loretta Bresciani Murray", class: 'w-[64px] h-[64px] md:mr-24 md:mb-4 rounded-circle'
+          = image_tag "team/jeremy-walker.jpg", alt: "A photo of Jeremy Walker", class: 'w-[64px] h-[64px] md:mr-24 md:mb-4 rounded-circle'
           .flex.flex-col.text-left
             .md:text-h4.text-h5.mb-4
               Interested in supporting Exercism as an organisation?
             .leading-regular.text-textColor5.text-18
               Get in touch with
               = succeed(',') do
-                %span.text-textColor2.font-medium Loretta Murray
-              our Head of Fundraising.
-        = link_to "mailto:loretta@exercism.org", class: "btn btn-primary" do
+                %span.text-textColor2.font-medium Jeremy Walker
+              Co-founder & CEO
+        = link_to "mailto:jeremy@exercism.org", class: "btn btn-primary" do
           = graphical_icon "envelope", css_class: "mr-16"
-          %span.md:text-16.text-14 loretta@exercism.org
+          %span.md:text-16.text-14 jeremy@exercism.org
 
   .lg-container.mb-64
     .c-shapes-impact.c-shapes-1
