--- a/app/views/mailers/mailshots_mailer/company_support_testimonial.html.erb
+++ b/app/views/mailers/mailshots_mailer/company_support_testimonial.html.erb
@@ -525,8 +525,8 @@ div.preheader {
                   </p>
                   <p style="margin-top: 20px;margin-bottom: 20px;">
                     <p style="margin-top: 0;margin-bottom: 0;">Thanks,<br/>
-                    Loretta Bresciani Murray<br/>
-                    Head of Partnerships at Exercism</p>
+                    Jeremy Walker<br/>
+                    Co-founder & CEO</p>
                   </p>
                 </div>
               </div>
