Update references from Jonathan to Jeremy

--- a/app/views/community/interviews/index.html.haml
+++ b/app/views/community/interviews/index.html.haml
@@ -10,7 +10,7 @@
           Join Jeremy as he explores the journeys of language creators, and Jonathan as journeys of our community.
           If you'd like to feature in a future video,
           = succeed('!') do
-            = link_to "get in touch", "mailto:jonathan@exercism.org", class: 'text-linkColor font-semibold'
+            = link_to "get in touch", "mailto:jeremy@exercism.org", class: 'text-linkColor font-semibold'
 
       .flex-shrink-0{ class: "sm:w-[400px] w-100" }
         .border-2.border-gradient-lightPurple.px-16.py-12.rounded-8
