--- a/app/views/settings/integrations.html.haml
+++ b/app/views/settings/integrations.html.haml
@@ -34,7 +34,7 @@
           %p.text-16.leading-140
             Your Exercism and Discord accounts are linked.
             You should receive the correct roles on Discord.
-            If you don't, please email #{link_to 'jonathan@exercism.org', 'mailto:jonathan@exercism.org'}.
+            If you don't, please email #{link_to 'jeremy@exercism.org', 'mailto:jeremy@exercism.org'}.
         - else
           %p.text-16.leading-140.mb-16
             To be assigned the correct roles on Discord, please connect your Exercism and Discord accounts.
