Update Jeremy's email address

--- a/app/views/about/organisation_supporters.html.haml
+++ b/app/views/about/organisation_supporters.html.haml
@@ -30,9 +30,9 @@
             %strong Jeremy Walker
           Exercism's CEO.
 
-      = link_to "mailto:jeremy@exercism.io", class: 'btn-primary btn-m mt-16 lg:mt-0 lg:ml-auto md:px-80' do
+      = link_to "mailto:jeremy@exercism.org", class: 'btn-primary btn-m mt-16 lg:mt-0 lg:ml-auto md:px-80' do
         = graphical_icon "email"
-        %span jeremy@exercism.io
+        %span jeremy@exercism.org
 
   .md-container
     .flex.mb-48.md:mb-56.items-start.flex-col.md:flex-row
@@ -114,6 +114,6 @@
             %strong Jeremy Walker
           Exercism's CEO.
 
-      = link_to "mailto:jeremy@exercism.io", class: 'btn-primary btn-m mt-16 lg:mt-0 lg:ml-auto md:px-80' do
+      = link_to "mailto:jeremy@exercism.org", class: 'btn-primary btn-m mt-16 lg:mt-0 lg:ml-auto md:px-80' do
         = graphical_icon "email"
-        %span jeremy@exercism.io
+        %span jeremy@exercism.org
