Update team page

--- a/app/views/about/team.html.haml
+++ b/app/views/about/team.html.haml
@@ -113,58 +113,6 @@
                     = graphical_icon "external-site-twitter"
                     %span Twitter
           .person
-            = image_tag "team/taiyab.jpg", alt: "An image of Taiyab Raja", class: "avatar"
-            .details
-              %h3
-                = link_to "Taiyab Raja", "https://taiyab.co.uk/", target: "_blank", rel: 'noreferrer'
-              .handle UX/UI Designer
-              %p Taiyab is a seasoned UI/UX designer responsible for designing Exercism v3. If you think Exercism looks and feels awesome, he’s the man to thank. Taiyab enjoys all things startups, design and entrepreneurship.
-              %ul.links
-                %li
-                  = link_to "https://taiyab.co.uk", target: "_blank", rel: 'noreferrer' do
-                    = graphical_icon "link"
-                    %span Taiyab Raja's Portfolio
-                %li
-                  = link_to "https://twitter.com/taiyab", target: "_blank", rel: 'noreferrer' do
-                    = graphical_icon "external-site-twitter"
-                    %span Twitter
-                %li
-                  = link_to "https://github.com/taiyab", target: "_blank", rel: 'noreferrer' do
-                    = graphical_icon "external-site-github"
-                    %span GitHub
-          .person
-            = image_tag "team/loretta.jpg", alt: "An image of Loretta Murray", class: "avatar"
-            .details
-              %h3
-                = link_to "Loretta Murray", "https://twitter.com/LorettaBMThink", target: "_blank", rel: 'noreferrer'
-              .handle Head of Fundraising and Partnerships
-              %p Loretta is motivated by the transformational power of fundraising and is a qualified business coach with a passion for developing fundraisers&apos; skills. Out of work she spends her time with family and friends, walking her two feisty little Border Terriers and reading.
-              %ul.links
-                %li
-                  = link_to "https://twitter.com/LorettaBMThink", target: "_blank", rel: 'noreferrer' do
-                    = graphical_icon "external-site-twitter"
-                    %span Twitter
-                %li
-                  = link_to "https://github.com/LorettaExercism", target: "_blank", rel: 'noreferrer' do
-                    = graphical_icon "external-site-github"
-                    %span GitHub
-          .person
-            = image_tag "team/jonathan.jpg", alt: "An image of Jonathan Middleton", class: "avatar"
-            .details
-              %h3
-                = link_to "Jonathan Middleton", "https://twitter.com/jonny_middleton", target: "_blank", rel: 'noreferrer'
-              .handle Community Manager
-              %p Jonathan loves connecting with people and hearing stories of how people are where they are in life. He is curious to learn and has been slowly getting to grips with programming. He loves the outdoors and has a young family who live in the world's best city...Cape Town, South Africa.  Seeing people gain access to skills that empower and improve life is what drives him every day!
-              %ul.links
-                %li
-                  = link_to "https://twitter.com/jonny_middleton", target: "_blank", rel: 'noreferrer' do
-                    = graphical_icon "external-site-twitter"
-                    %span Twitter
-                %li
-                  = link_to "https://github.com/jonathandmiddleton", target: "_blank", rel: 'noreferrer' do
-                    = graphical_icon "external-site-github"
-                    %span GitHub
-          .person
             = image_tag "team/aron.jpg", alt: "An image of Aron Demeter", class: "avatar"
             .details
               %h3
@@ -203,6 +151,21 @@
             .details
               %h3 Karlo Soriano
               %p Karlo worked on the website part of Exercism. He created most of the website's interactive frontend for v3, and contributed to much of the Rails backend platform.
+          .person
+            = image_tag "team/taiyab.jpg", alt: "An image of Taiyab Raja", class: "avatar"
+            .details
+              %h3 Taiyab Raja
+              %p Taiyab is a seasoned UI/UX designer responsible for designing Exercism v3. If you think Exercism looks and feels awesome, he’s the man to thank. Taiyab enjoys all things startups, design and entrepreneurship.
+          .person
+            = image_tag "team/loretta.jpg", alt: "An image of Loretta Murray", class: "avatar"
+            .details
+              %h3 Loretta Murray
+              %p Loretta is motivated by the transformational power of fundraising and is a qualified business coach with a passion for developing fundraisers&apos; skills. Out of work she spends her time with family and friends, walking her two feisty little Border Terriers and reading.
+          .person
+            = image_tag "team/jonathan.jpg", alt: "An image of Jonathan Middleton", class: "avatar"
+            .details
+              %h3 Jonathan Middleton
+              %p Jonathan loves connecting with people and hearing stories of how people are where they are in life. He is curious to learn and has been slowly getting to grips with programming. He loves the outdoors and has a young family who live in the world's best city...Cape Town, South Africa.  Seeing people gain access to skills that empower and improve life is what drives him every day!
 
       %section.grid.gird-cols-1.md:grid-cols-3.gap-56
         .community-team
