--- a/app/views/about/team.html.haml
+++ b/app/views/about/team.html.haml
@@ -155,17 +155,17 @@
             = image_tag "team/taiyab.jpg", alt: "An image of Taiyab Raja", class: "avatar"
             .details
               %h3 Taiyab Raja
-              %p Taiyab is a seasoned UI/UX designer responsible for designing Exercism v3. If you think Exercism looks and feels awesome, he’s the man to thank. Taiyab enjoys all things startups, design and entrepreneurship.
+              %p Taiyab is designer behind the beautiful visuals and UX of Exercism v3. He enjoys all things startups, design and entrepreneurship.
           .person
             = image_tag "team/loretta.jpg", alt: "An image of Loretta Murray", class: "avatar"
             .details
               %h3 Loretta Murray
-              %p Loretta is motivated by the transformational power of fundraising and is a qualified business coach with a passion for developing fundraisers&apos; skills. Out of work she spends her time with family and friends, walking her two feisty little Border Terriers and reading.
+              %p Loretta was Exercism's Head of Fundraising during 2022-2023. She's motivated by the transformational power of fundraising and is a qualified business coach with a passion for developing fundraisers&apos; skills.
           .person
             = image_tag "team/jonathan.jpg", alt: "An image of Jonathan Middleton", class: "avatar"
             .details
               %h3 Jonathan Middleton
-              %p Jonathan loves connecting with people and hearing stories of how people are where they are in life. He is curious to learn and has been slowly getting to grips with programming. He loves the outdoors and has a young family who live in the world's best city...Cape Town, South Africa.  Seeing people gain access to skills that empower and improve life is what drives him every day!
+              %p Jonathan was Exercism's Community Manager during 2022-2023. He loves connecting with people and hearing stories of how people are where they are in life. He is curious to learn and has been slowly getting to grips with programming.
 
       %section.grid.gird-cols-1.md:grid-cols-3.gap-56
         .community-team
