Improve image sizes on landing page

--- a/app/views/pages/index.html.haml
+++ b/app/views/pages/index.html.haml
@@ -75,7 +75,7 @@
                         = track_icon(track)
                     .font-semibold.text-textColor7.ml-16.whitespace-nowrap +#{sample[:num_tracks]} more
 
-        = image_tag "screenshots/landing-page-exercise.jpg", alt: "", role: :presentation, category: :graphics, class: "main-graphic lg:max-w-1-2 lg:ml-80 mt-32 lg:mt-96 shadow-lgZ1 w-fill", width: '668', height: 611
+        = image_tag "screenshots/landing-page-exercise.webp", alt: "", role: :presentation, category: :graphics, class: "main-graphic lg:max-w-1-2 lg:ml-80 mt-32 lg:mt-96 shadow-lgZ1 w-fill", width: 1376, height: 1076
 
       .features.grid.grid-cols-1.md:grid-cols-3.gap-x-80.gap-y-32
         .feature
@@ -93,7 +93,7 @@
           %h3.text-h4 Get automated analysis on your code
           %p.text-p-base Not quite sure how well you&apos;ve done? We run automatic analysis on your solutions to give you quick feedback and points of improvement.
 
-  %section.mentoring-section.mb-80.pt-48.md:pt-96.pb-64
+  %section.mentoring-section
     .lg-container
       .flex.flex-col.md:flex-row.items-center.justify-center.mb-24.sm:mb-64
         = graphical_icon 'mentoring-coffee', category: :graphics, css_class: 'top-graphic mb-20 md:mb-0 lg:mr-128'
@@ -107,7 +107,7 @@
           %p.text-p-xlarge
             Discover new and exciting ways to approach an exercise by getting mentored on it. Become more familiar with the conventions, idioms and opinions of a particular programming language.
 
-      = image_tag "screenshots/mentoring.jpg", role: :presentation, class: "main-graphic mb-60 shadow-lgZ1", width: 2880, height: 1880
+      = image_tag "screenshots/mentoring.webp", role: :presentation, class: "main-graphic mb-60 shadow-lgZ1", width: 2752, height: 1796
 
       .flex.flex-col.items-center
         %h3.text-h2 Why mentoring?
