--- a/app/views/layouts/_meta_tags.html.haml
+++ b/app/views/layouts/_meta_tags.html.haml
@@ -1,3 +1,6 @@
+- if canonical_url
+  %link{ rel: "canonical", href: canonical_url }
+
 = csrf_meta_tags
 = csp_meta_tag
 = action_cable_meta_tag
@@ -7,7 +10,7 @@
 %meta{ name: "language-server-url", content: Exercism.config.language_server_url }
 %meta{ name: "bug-reports-url", content: Exercism::Routes.api_bug_reports_url }
 %meta{ name: "parse-markdown-url", content: Exercism::Routes.api_parse_markdown_url }
-%meta{ name: "user-id", content: current_user ? current_user.id : nil }
+%meta{ name: "user-id", content: current_user&.id }
 - unless Rails.env.test?
   %meta{ name: "stripe-publishable-key", content: Exercism.secrets.stripe_publishable_key }
 
@@ -24,6 +27,7 @@
 %meta{ name: "twitter:title", content: meta_title }
 %meta{ name: "twitter:description", content: meta_description }
 %meta{ name: "twitter:image", content: meta_image_url }
+
 
 / Open Graph data
 %meta{ property: "og:title", content: meta_title }
